--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.snowgears.shopconverter</groupId>
     <artifactId>ShopConverter</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -40,8 +40,9 @@
         <dependency>
             <groupId>com.snowgears.shop</groupId>
             <artifactId>Shop</artifactId>
-            <version>1.8.2.1</version>
-            <scope>provided</scope>
+            <version>1.8.2.9</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/Shop.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
