--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ShopConverter
 author: Tanner Embry (SnowGears)
-description: Convert ChestShop shops into Shop shops.
-version: 1.1.3
+description: Convert other shops plugins into Shop shops.
+version: 1.1.4
 api-version: 1.13
 main: com.snowgears.shopconverter.ShopConverter
 depend: [Shop]
